--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,5 @@
-<h1>Sample App</h1>
-<p>
-This is the home page for the
-<a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
-sample application.
-</p>
-<%= link_to "Sign up now!", signup_path, :class => "signup_button round" %>
+<% if signed_in? %>
+<%= render 'pages/home_signed_in' %>
+<% else %>
+<%= render 'pages/home_not_signed_in' %>
+<% end %>
