Added user following

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,7 @@
 <% if signed_in? %>
 <%= render 'pages/home_signed_in' %>
+<%= render 'shared/user_info' %>
+<%= render 'shared/stats' %>
 <% else %>
 <%= render 'pages/home_not_signed_in' %>
 <% end %>
