--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,11 +11,13 @@
 <%= will_paginate @microposts %>
 <% end %>
 </h1>
+<%= render 'follow_form' if signed_in? %>
 </td>
 <td class="sidebar round">
 <strong>Name</strong> <%= @user.name %><br />
 <strong>URL</strong> <%= link_to user_path(@user), @user %>
 <strong>Microposts</strong> <%= @user.microposts.count %>
+<%= render 'shared/stats' %>
 </td>
 </tr>
 </table>
